Fix CI failures: formatting, import cleanup, and Java compatibility